# Practice_Lab

./: README.md
ex1/publisher_subscriber/: CMakeLists.txt  package.xml
ex1/publisher_subscriber_custom/: CMakeLists.txt  README.md
ex1/publisher_subscriber_msgs/: README.md  package.xml
ex1_publischer_subscriber/: Readme.md
ex1_publischer_subscriber/pub_sub/: CMakeLists.txt  package.xml
ex1_publischer_subscriber/pub_sub_msgs/: CMakeLists.txt  package.xml
ex1_publisher_subscriber/: README.md
ex1_publisher_subscriber/publisher_subscriber/: CMakeLists.txt  README.md
ex1_publisher_subscriber/publisher_subscriber_custom/: CMakeLists.txt  package.xml
ex1_publisher_subscriber/publisher_subscriber_msgs/: CMakeLists.txt  package.xml
ex1_publisher_subscriber/publisher_subscriber_test_custom/: CMakeLists.txt  package.xml
ex1_publisher_subscriber/src/: subscriber.cpp
ex2/comau_description/: CMakeLists.txt  package.xml
ex2/m20iA_sub/: package.xml
ex2_tf/: Readme.md
ex2_tf/fanuc_m20ia_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ex2_tf/m20ia_publisher/: CMakeLists.txt  package.xml
ex3_kinematics/: Readme.md
ex4_planning/: Readme.md
ex4_planning/smartsix_controller/: CMakeLists.txt  Readme.md  package.xml  rqt_plot_planned_trajectory.xml
ex4_planning/smartsix_controller/data/: circular.traj
ex4_planning/smartsix_controller/launch/: demo_start_up.launch  smartsix_controller.launch
ex4_planning/smartsix_controller/scripts/: create_circular_tj.m
ex4_planning/smartsix_controller/src/: smartsix_controller.cpp
(+119 files in other folders)
