<package format="2">

  <name>comau_description</name>
  <version>1.0.0</version>

  <description>The comau_description package</description>

  <author email="eferrentino@unisa.it">Enrico Ferrentino</author>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>

</package>
